Bug 353939 - license texts are missing
Summary: license texts are missing
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcoreaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-15 20:43 UTC by Thomas Eschenbacher
Modified: 2016-07-07 23:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
about/license dialog of konsole (67.09 KB, image/png)
2016-05-18 11:59 UTC, Peter Mühlenpfordt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Eschenbacher 2015-10-15 20:43:47 UTC
I have ported my application to KF5 and wonder where I can get the full license texts (e.g. for GPL2+). I had that in my help/about dialog under KDE4, but now KAboutLicense::text() only returns one single sentence with the "ShortName".

In the source of kaboutdata.cpp (kcoreaddons-5.14.0 / Gentoo Linux) Isee that the code searches for a file "LICENSES/GPL_V2" in QStandardPaths::GenericDataLocation (which is a list that contains "/usr/share") - but that does not work. I only have
/usr/share/apps/LICENSES/GPL_V2 - but that one belongs to an old KDE4 installation and is not found.

Reproducible: Always
Comment 1 Peter Mühlenpfordt 2016-05-18 11:59:10 UTC
Created attachment 99047 [details]
about/license dialog of konsole

Same problem in my Kubuntu 16.04 installation.
Seems to affect any program using Qt5 libs.
E.g. konsole's about dialog does not show the complete license text.
The license files are located under /usr/share/kde4/apps/LICENSES/, which is missing in QStandardPaths::GenericDataLocation.
Comment 2 Michael Pyne 2016-06-04 22:20:38 UTC
I'm working a fix for this at review request 128103 https://git.reviewboard.kde.org/r/128103/
Comment 3 Michael Pyne 2016-07-07 23:57:06 UTC
Git commit b4ccc6513b7106d81dbfd1f877a137dc190290c4 by Michael Pyne.
Committed on 02/07/2016 at 21:40.
Pushed by mpyne into branch 'master'.

Install known licenses and find them at runtime (regression fix).
FIXED-IN:5.25
REVIEW:128103

M  +3    -0    src/lib/CMakeLists.txt
M  +20   -8    src/lib/kaboutdata.cpp
M  +2    -1    src/lib/kaboutdata.h
A  +124  -0    src/lib/licenses/ARTISTIC
A  +20   -0    src/lib/licenses/BSD
A  +8    -0    src/lib/licenses/CMakeLists.txt
A  +339  -0    src/lib/licenses/GPL_V2
A  +674  -0    src/lib/licenses/GPL_V3
A  +481  -0    src/lib/licenses/LGPL_V2
A  +502  -0    src/lib/licenses/LGPL_V21
A  +165  -0    src/lib/licenses/LGPL_V3
A  +103  -0    src/lib/licenses/QPL_V1.0

http://commits.kde.org/kcoreaddons/b4ccc6513b7106d81dbfd1f877a137dc190290c4