Install known licenses and find them at runtime (regression fix).

BUG:353939
FIXED-IN:5.25
REVIEW:128103